Confiant AdQuality: Improve ScanResult class so it can transform Bidders into map with/without issues